tests/snapshots/snapshot_tests__array_split_03.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_split_03.vmt",
    status: Good,
    used_instantiations: [],
}
