tests/snapshots/snapshot_tests__array_split_05.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_split_05.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a N N) N) N)",
        "(= (Read-Int-Int (Write-Int-Int a_next N N) i) (Read-Int-Int a_next i))",
        "(= (Read-Int-Int (Write-Int-Int a i (- N)) i) (- N))",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z (- i_next)) Z) (- i_next))",
        "(= (Read-Int-Int (Write-Int-Int a_next N i) N) i)",
        "(= (Read-Int-Int (Write-Int-Int a i (- i)) i) (- i))",
        "(= (Read-Int-Int (Write-Int-Int a_next i_next (- i)) i_next) (- i))",
        "(= (Read-Int-Int (Write-Int-Int a N Z) N) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z (- Z)) Z) (- Z))",
        "(= (Read-Int-Int (Write-Int-Int a i (- Z)) i) (- Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a N (- Z)) N) (- Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a i (- i_next)) i) (- i_next))",
        "(= (Read-Int-Int (Write-Int-Int a N N) N) (Read-Int-Int a N))",
        "(= (Read-Int-Int (Write-Int-Int a N Z) N) (Read-Int-Int a N))",
    ],
}
