tests/snapshots/snapshot_tests__array_split_05.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_split_05.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 N N) N) N)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 N N) N) (Read-Int-Int Array-Int-Int!val!1 N))",
    ],
}
