tests/snapshots/snapshot_tests__array_split_06.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_split_06.vmt",
    status: Good,
    used_instantiations: [],
}
